fooservice/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "local_service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "both",
                "name": "health_check",
                "config": {
                  "pass_through_mode": true, "endpoint": "/healthcheck"
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://127.0.0.1:9211",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "rds": {
              "cluster": "rtr-rds",
              "route_config_name": "egress",
              "refresh_delay_ms": 30000
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/var/log/envoy/envoy-access-log",
    "address": "tcp://127.0.0.1:8001"
  },
  "cluster_manager": {
    "sds": {
      "cluster": {
        "name": "rtr-sds",
        "connect_timeout_ms": 15000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://discovery.rtrdc.net:8080"}]
      },
      "refresh_delay_ms": 15000      
    },
    "cds": {
      "cluster": {
        "name": "rtr-cds",
        "connect_timeout_ms": 15000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://discovery.rtrdc.net:8080"}]
      },
      "refresh_delay_ms": 15000      
    },
    "clusters": [
      {
        "name": "local_service",
        "connect_timeout_ms": 250,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://127.0.0.1:8080"}]
      },
      {
        "name": "rtr-rds",
        "connect_timeout_ms": 10000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [{"url": "tcp://discovery.rtrdc.net:8080"}]
      }
    ]
  }
}
